<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Flip Game</string>
    <string name="start_play">Jugar</string>
    <string name="menu_howto">Ayuda</string>
    <string name="menu_about">Acerca de</string>
    <string name="menu_player">Jugador</string>
    <string name="title_about">Acerca de Flip</string>
    <string name="title_howto">Como jugar a Flip</string>
    <string name="radio_color">Colores</string>
    <string name="radio_number">Numeros</string>
    <string name="check_vibrate">Vibracion</string>
    <string name="check_sound">Sonido</string>
    <string name="num_elem_x">Elementos del eje X: </string>
    <string name="num_elem_y">Elementos del eje Y: </string>
    <string name="num_colors">Tramas: </string>
    <string name="score_time">Tiempo: </string>
    <string name="score_clicks">Pulsaciones: </string>
    <string name="game_end_1">Se finalizó el juego con un total de </string>
    <string name="game_end_2"> pulsaciones</string>
    <string name="title_activity_how_to">Howto</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_about">Acerca de</string>
    <string name="title_activity_game_field">Pantalla de juego</string>

</resources>
