<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context=".GameConfig">

    <!-- num celdas -->
    <TextView
        android:id="@+id/seekbarXtxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <SeekBar
        android:id="@+id/seekbarX"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:max="6"/>
    <TextView
        android:id="@+id/seekbarYtxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <SeekBar
        android:id="@+id/seekbarY"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:max="6"/>
    <TextView
        android:id="@+id/seekbarColorsTxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <SeekBar
        android:id="@+id/seekbarColors"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:max="5"/>

    <!-- contenido -->
    <RadioGroup
        android:id="@+id/radioGroup01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <RadioButton
            android:text="@string/radio_color"
            android:id="@+id/radioButtonC"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <RadioButton
            android:text="@string/radio_number"
            android:id="@+id/radioButtonN"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"/>
    </RadioGroup>

    <!-- otras opciones -->
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <CheckBox
            android:id="@+id/checkboxSound"
            android:text="@string/check_sound"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <CheckBox
            android:id="@+id/checkboxVibrate"
            android:text="@string/check_vibrate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <Button
        android:id="@+id/startButton"
        android:text="@string/start_play"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal|fill_horizontal|center"
        android:layout_gravity="center_horizontal|center"/>

</LinearLayout>
